# haskell-actor-model

./: CHANGELOG.md  LICENCE  hsmsgs.cabal
app/: Main.hs
src/: Erlangesque.hs
