cabal-version:      2.4
name:               hsmsgs
version:            0.1.0.0

synopsis: A basic implementation of the Actor Model in Haskell

description: Not a very idiomatic way to programme concurrently in Haskell. A basic implementation of an Erlang-style Actor Model.


author:             dan
maintainer:         me@danrh.co.uk

license-file: LICENCE
 
library
    exposed-modules:  Erlangesque

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: LambdaCase
    build-depends:    base ^>=4.14.1.0, stm, containers
    hs-source-dirs:   src
    default-language: Haskell2010



executable hsmsgs
    main-is:          Main.hs

    other-extensions: LambdaCase
    build-depends:    base ^>=4.14.1.0,
                      hsmsgs

    hs-source-dirs:   app
    default-language: Haskell2010
